--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,127 @@
 body {
-    font-family: sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #fafaf0;
-    color: #333;
-  }
+  margin: 0;
+  background-color: #F5F5F5;
+  color: #000000;
+  font-family: 'Asap', sans-serif;
+  line-height: 1.6;
+}
+
+.logo {
+  width: 100px;
+}
+
+.hero {
+  text-align: center;
+  padding-top: 5rem; /* generous breathing room */
+  padding-bottom: 2rem;
+}
+
+.logo-centered {
+  width: 200px; /* or tweak to taste */
+  max-width: 100%;
+  height: auto;
+  margin: 0 auto 1rem auto; /* centers and gives space below */
+  display: block;
+}
+
+.site-title {
+  font-family: 'Asap Condensed', sans-serif;
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+
+.site-tagline {
+  font-size: 1.2rem;
+  color: #333;
+}
+
+
+.corner-border {
+  position: fixed;
+  top: 0;
+  width: 180px;         /* adjust based on desired size */
+  height: 180px;
+  background-repeat: no-repeat;
+  background-position: top left;
+  background-size: contain;
+  z-index: 10;
+  pointer-events: none;
+}
+
+.corner-left {
+  left: 0;
+  background-image: url('../img/borderGraphic.png');
   
-  header {
-    background-color: #e1e7d9;
-    padding: 2rem;
-    text-align: center;
-  }
-  
-  main {
-    padding: 2rem;
-  }
-  
-  footer {
-    background-color: #ddd;
-    text-align: center;
-    padding: 1rem;
-    font-size: 0.9rem;
-  }
-  
+}
+
+.corner-right {
+  right: 0;
+  background-image: url('../img/borderGraphic.png');
+  transform: scaleX(-1); /* horizontal flip for symmetry */
+}
+
+
+
+
+
+
+.content {
+  max-width: 800px;
+  margin: 2rem auto;
+  padding: 0 1rem;
+}
+
+
+
+.footer {
+  background-color: #000000;
+  color: #ffffff;
+  text-align: center;
+  padding: 2rem 1rem;
+}
+
+.contact-list {
+  list-style: none;
+  padding: 0;
+  display: inline-block;
+  text-align: left;
+}
+
+
+.contact-list li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.75rem;
+}
+
+.icon-wrapper {
+  display: inline-block;
+  min-width: 26px;
+  max-width: 40px;
+  margin-right: 2rem;
+}
+
+.icon-wrapper img {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: contain;
+}
+
+
+.contact-list li img {
+  width: 60px;
+  height: 40px;
+  margin-right: 0.5rem;
+}
+
+.contact-list li a {
+  color: #ffffff;
+  text-decoration: underline;
+  transition: color 0.2s ease;
+}
+
+.contact-list li a:hover {
+  color: #ccc;
+}
