--- a/css/style.css
+++ b/css/style.css
@@ -276,3 +276,15 @@ body {
   opacity: 1;
   transform: translateY(0);
 }
+
+
+.parallax {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  background-attachment: scroll;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 1;
+}
